-- GARANTE SCHEMA
CREATE DATABASE IF NOT EXISTS labdatabase;
USE labdatabase;

-- DESABILITA FKs TEMPORARIAMENTE PARA DROPAR SEM ERRO
SET FOREIGN_KEY_CHECKS = 0;

-- DROP NA ORDEM CERTA (FILHAS -> PAIS), SÓ SE EXISTIREM
DROP TABLE IF EXISTS NOTAS;
DROP TABLE IF EXISTS MATRICULAS;
DROP TABLE IF EXISTS CURSOS;
DROP TABLE IF EXISTS ESTUDANTES;

SET FOREIGN_KEY_CHECKS = 1;

-- CRIA TABELAS
CREATE TABLE ESTUDANTES (
  id_estudante INT AUTO_INCREMENT PRIMARY KEY NOT NULL,
  nome VARCHAR(45) NOT NULL,
  data_nascimento DATE NOT NULL,
  cpf VARCHAR(11) NOT NULL,
  email VARCHAR(30) NOT NULL,
  UNIQUE (cpf),
  UNIQUE (email)
) ENGINE=InnoDB;

CREATE TABLE CURSOS (
  id_curso INT AUTO_INCREMENT PRIMARY KEY NOT NULL,
  nome_curso VARCHAR(45) NOT NULL,
  carga_horaria INT NOT NULL
) ENGINE=InnoDB;

CREATE TABLE MATRICULAS (
  id_matricula INT AUTO_INCREMENT PRIMARY KEY NOT NULL,
  data_matricula DATE NOT NULL,
  status_matricula VARCHAR(20) NOT NULL,
  id_estudante INT NOT NULL,
  id_curso INT NOT NULL,
  UNIQUE (id_estudante, id_curso),
  CHECK (status_matricula IN ('Ativo','Inativo'))
) ENGINE=InnoDB;

CREATE TABLE NOTAS (
  id_nota INT AUTO_INCREMENT PRIMARY KEY NOT NULL,
  nota_estudante DECIMAL(4,2) NOT NULL,
  semestre VARCHAR(14),
  id_matricula INT NOT NULL
) ENGINE=InnoDB;

-- FKs
ALTER TABLE MATRICULAS
  ADD CONSTRAINT ESTUDANTES_MATRICULAS_FK
  FOREIGN KEY (id_estudante) REFERENCES ESTUDANTES (id_estudante);

ALTER TABLE MATRICULAS
  ADD CONSTRAINT CURSOS_MATRICULAS_FK
  FOREIGN KEY (id_curso) REFERENCES CURSOS (id_curso);

ALTER TABLE NOTAS
  ADD CONSTRAINT MATRICULAS_NOTAS_FK
  FOREIGN KEY (id_matricula) REFERENCES MATRICULAS (id_matricula);
